@@ -1,5 +1,13 @@
 2/28/2013 Jet Goodson <jetgoodson@gmail.com>
     M visualyze.R
+    - added save ability
+    M rageAgainstTheSupportVectorMachine.R
+    - split into a train and test function
+    M LitteraLector.R
+    - added ability to save SVM then reload	
+	
+2/28/2013 Jet Goodson <jetgoodson@gmail.com>
+    M visualyze.R
     - tweaked the labels to be 0-9	
     M rageAgainstTheSupportVectorMachine.R
     - modified table output to have different names for different calls to rage
